[truelayer] Moved requesting handling to services

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,15 @@
-CLIENT_ID = truelayer-client-id
-CLIENT_SECRET = truelayer-client-secret
-REDIRECT_URI = http://localhost:3000/callback
-JWT_SECRET = RandomSecret
-MOCK = true
-MONGODB_URI = mongodb://localhost:27017
+# Truelayer client ID and secret
+CLIENT_ID       = truelayer-client-id
+CLIENT_SECRET   = truelayer-client-secret
+
+# Truelayer callback redirect URL
+REDIRECT_URI    = http://localhost:3000/callback
+
+# Secret used to generate json web token
+JWT_SECRET      = RandomSecret
+
+# Whether or not the mock is set to true
+MOCK            = true
+
+# The URI for the mongodb server
+MONGODB_URI     = mongodb://localhost:27017
