--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
-    "mocha": "^5.0.1"
+    "expect": "^22.4.0",
+    "mocha": "^5.0.1",
+    "supertest": "^3.0.0"
   },
   "_moduleAliases": {
     "@models": "server/models",
@@ -31,6 +33,7 @@
     "@db": "server/db",
     "@controllers": "server/controllers",
     "@log": "server/log",
-    "@tracecodes": "server/tracecodes/tracecodes"
+    "@tracecodes": "server/tracecodes/tracecodes",
+    "@services": "server/services"
   }
 }
