--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodejs server/server.js",
-    "test": "mocha server/**/*.test.js"
+    "test": "mocha server/**/*.test.js --exit"
   },
   "author": "mayankamencherla",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "@controllers": "server/controllers",
     "@log": "server/log",
     "@tracecodes": "server/tracecodes/tracecodes",
-    "@services": "server/services"
+    "@services": "server/services",
+    "@seed": "server/tests/seed"
   }
 }
