--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,7 @@ MOCK            = true
 
 # The URI for the mongodb server
 MONGODB_URI     = mongodb://localhost:27017
+
+# Authentication tokens
+ACCESS_TOKEN  = access_token
+REFRESH_TOKEN = refresh_token
