--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "expect": "^22.4.0",
     "mocha": "^5.0.1",
+    "nock": "^9.2.3",
     "supertest": "^3.0.0"
   },
   "_moduleAliases": {
