--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.0.3",
     "mongoose": "^5.0.7",
     "truelayer-client": "^1.0.9",
+    "validator": "^9.4.1",
     "winston": "^2.4.0"
   },
   "devDependencies": {
