--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodejs server/server.js",
-    "test": "nyc --reporter=text mocha server/**/*.test.js --exit"
+    "test": "nyc --reporter=html --reporter=text --cache mocha server/**/*.test.js --exit"
   },
   "author": "mayankamencherla",
   "license": "MIT",
