[truelayer] Updated README.md with config and env details

--- a/.env.sample
+++ b/.env.sample
@@ -15,5 +15,8 @@ MOCK            = true
 MONGODB_URI     = mongodb://localhost:27017
 
 # Authentication tokens
-ACCESS_TOKEN  = access_token
-REFRESH_TOKEN = refresh_token
+ACCESS_TOKEN    = access_token
+REFRESH_TOKEN   = refresh_token
+
+# AES Encryption Key
+AES_KEY         = random_symmetric_key
