[truelayer] Updated README with Truelayer token security

--- a/.env.sample
+++ b/.env.sample
@@ -18,5 +18,5 @@ MONGODB_URI     = mongodb://localhost:27017
 ACCESS_TOKEN    = access_token
 REFRESH_TOKEN   = refresh_token
 
-# AES Encryption Key
+# AES Encryption variables
 AES_KEY         = random_symmetric_key
