[truelayer] Initial commit for interview project

--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,4 @@ REFRESH_TOKEN   = refresh_token
 
 # AES Encryption variables
 AES_KEY         = random_symmetric_key
+AES_IV          = random_symmetric_iv
