[truelayer] Major overhaul of the app into a MySQL DB

--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "envalid": "^3.1.1",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
+    "knex": "^0.14.4",
     "lodash": "^4.17.5",
     "module-alias": "^2.0.6",
     "mongodb": "^3.0.3",
     "mongoose": "^5.0.7",
+    "mysql": "^2.15.0",
+    "redis": "^2.8.0",
     "truelayer-client": "^1.0.9",
+    "uuid": "^3.2.1",
     "validator": "^9.4.1",
     "winston": "^2.4.0"
   },
