--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
+    "migrate": "cd server && knex migrate:latest && cd ..",
+    "start-docker": "nodemon server/server.js",
     "test": "nyc --reporter=html --reporter=text --cache mocha server/**/*.test.js --exit"
   },
   "author": "mayankamencherla",
@@ -21,6 +23,7 @@
     "module-alias": "^2.0.6",
     "mongodb": "^3.0.3",
     "mysql": "^2.15.0",
+    "nodemon": "^1.17.1",
     "redis": "^2.8.0",
     "truelayer-client": "^1.0.9",
     "uuid": "^3.2.1",
