[truelayer] Selecting mysql and redis environment and then creating clients

--- a/.env.sample
+++ b/.env.sample
@@ -18,3 +18,5 @@ REFRESH_TOKEN   = refresh_token
 # AES Encryption variables
 AES_KEY         = random_symmetric_key
 AES_IV          = random_symmetric_iv
+
+NODE_ENV        = dev
