[truelayer] Added a test case when account.lenth = 0

--- a/.env.sample
+++ b/.env.sample
@@ -16,7 +16,7 @@ ACCESS_TOKEN    = access_token
 REFRESH_TOKEN   = refresh_token
 
 # AES Encryption variables
-AES_KEY         = random_symmetric_key
-AES_IV          = random_symmetric_iv
+AES_KEY         = akjsdnfjkdnfskjdnfkjsdfsdfsdfdsf
+AES_IV          = adfhsafbkjsssdhf
 
 NODE_ENV        = dev
