--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^5.0.1",
     "envalid": "^3.1.1",
     "express": "^4.16.2",
+    "express-rate-limit": "^2.11.0",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.4",
     "lodash": "^4.17.5",
