[truelayer] Moved large method calls to multiple lines to make the code cleaner

--- a/.env.sample
+++ b/.env.sample
@@ -19,4 +19,4 @@ REFRESH_TOKEN   = refresh_token
 AES_KEY         = akjsdnfjkdnfskjdnfkjsdfsdfsdfdsf
 AES_IV          = adfhsafbkjsssdhf
 
-NODE_ENV        = dev
+NODE_ENV        = development
